--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,5 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   },
-  "devDependencies": {},
   "description": ""
 }
